@@ -21,7 +21,7 @@ Gem::Specification.new do |s|
   s.required_ruby_version = ">= 2.5.0"
 
   s.add_development_dependency('rake')
-  s.add_development_dependency('minitest', "> 5.0.0", "< 5.12.0")
+  s.add_development_dependency('minitest', "> 5.0.0")
   s.add_development_dependency('simplecov')
   s.description = <<-END.gsub(/^ +/, "")
     BinData is a declarative way to read and write binary file formats.
