@@ -123,7 +123,7 @@ module BinData
     def warn_if_name_is_already_registered(name, class_to_register)
       prev_class = @registry[name]
       if prev_class && prev_class != class_to_register
-        warn "warning: replacing registered class #{prev_class} " \
+        Kernel.warn "warning: replacing registered class #{prev_class} " \
              "with #{class_to_register}"
       end
     end
